# pixiv3-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
pixiv3-rs-proc/: Cargo.toml  README.md
pixiv3-rs-proc/src/: lib.rs
src/: aapi.rs  error.rs  lib.rs  log.rs  models.rs  params.rs  token_manager.rs
