[workspace]
members = ["pixiv3-rs-proc"]

[package]
name = "pixiv3-rs"
version = "0.1.0"
authors = ["aarkegz <aarkegz@gmail.com>"]
edition = "2024"
categories = ["api-bindings", "web-programming::http-client"]
description = "Pixiv App API client (Rust port of pixivpy3)"
documentation = "https://docs.rs/pixiv3-rs"
homepage = "https://github.com/GeminiLab/pixiv3-rs"
keywords = ["pixiv", "api", "client", "anime", "illustration"]
license = "Unlicense"
readme = "README.md"
repository = "https://github.com/GeminiLab/pixiv3-rs"
rust-version = "1.85"

include = ["src/", "README.md", "LICENSE"]

[features]
default = ["stream", "log"]
stream = ["dep:futures-core", "dep:async-stream", "pixiv3-rs-proc/stream"]
log = ["dep:log"]

[dependencies]
arc-swap = "1.8"
chrono = { version = "0.4", features = ["serde"] }
kv-pairs = "0.1"
regex = "1.10"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "query", "form"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.28", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }

async-stream = { version = "0.3", optional = true }
futures-core = { version = "0.3", optional = true }

log = { version = "0.4", optional = true }

pixiv3-rs-proc = { version = "0.1.0", path = "pixiv3-rs-proc", default-features = false }
